[gd_scene load_steps=15 format=3 uid="uid://8m05x63andlr"]

[ext_resource type="PackedScene" uid="uid://hcmhj7fe2df3" path="res://Scenes/Enemy/enemy_template.tscn" id="1_sw3l6"]
[ext_resource type="PackedScene" uid="uid://bidm71623dlfa" path="res://Scenes/Gun/gun.tscn" id="2_d42vp"]
[ext_resource type="Script" path="res://Scripts/malware(gun).gd" id="2_p6puf"]
[ext_resource type="Texture2D" uid="uid://blygel6ersruk" path="res://Sprites/Gun/gun (player).png" id="3_rotac"]
[ext_resource type="Texture2D" uid="uid://b7tmkklqr12iy" path="res://Sprites/Player/malware (body).png" id="3_tlpc0"]
[ext_resource type="Texture2D" uid="uid://dan7jmpbipa1h" path="res://Sprites/Player/malware  legs (idle).png" id="4_yg75f"]
[ext_resource type="Texture2D" uid="uid://v4t0b60iwtgv" path="res://Sprites/Player/malware legs (run 1).png" id="7_1x2ws"]
[ext_resource type="Texture2D" uid="uid://ju3tvrtdd8lp" path="res://Sprites/Player/malware  legs (run 2).png" id="8_a2jrd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkcbu"]
size = Vector2(43, 96)

[sub_resource type="Animation" id="Animation_f47c1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_yg75f")]
}

[sub_resource type="Animation" id="Animation_glmq4"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_yg75f")]
}

[sub_resource type="Animation" id="Animation_pl4f4"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_yg75f"), ExtResource("7_1x2ws"), ExtResource("8_a2jrd"), ExtResource("7_1x2ws")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4pny"]
_data = {
"RESET": SubResource("Animation_f47c1"),
"idle": SubResource("Animation_glmq4"),
"run": SubResource("Animation_pl4f4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_803b6"]
radius = 318.512

[node name="EnemyTemplate" instance=ExtResource("1_sw3l6")]
script = ExtResource("2_p6puf")

[node name="Sprite body" parent="." index="0"]
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("3_tlpc0")

[node name="Sprite legs" parent="." index="1"]
texture_filter = 1
scale = Vector2(6, 6)
texture = ExtResource("4_yg75f")

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_wkcbu")

[node name="Gun" parent="." index="3" instance=ExtResource("2_d42vp")]
gun_sprite = ExtResource("3_rotac")
is_playergun = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_g4pny")
}
autoplay = "idle"
speed_scale = 1.88

[node name="Area2D" type="Area2D" parent="." index="5"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_803b6")

[node name="Timer" type="Timer" parent="." index="6"]
autostart = true

[node name="RayCast2D" parent="." index="7"]
position = Vector2(3, 35)
target_position = Vector2(50, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
