extends "res://Scripts/enemy_template.gd"

func _ready() -> void:
	gun.target = find_parent("Main").get_node("Player")
	
func handle_states():
	match state:
		enemy_state.idle:
			$AnimationPlayer.play("idle")
		enemy_state.active:
			if dir:
				$AnimationPlayer.play("run")
			else:
				$AnimationPlayer.play("idle")
		enemy_state.dead:
			dead()
			

func _on_area_2d_body_entered(body: Node2D) -> void:
	state = enemy_state.active


func _on_area_2d_body_exited(body: Node2D) -> void:
	state = enemy_state.idle


func _on_timer_timeout() -> void:
	if state == enemy_state.active:
		gun.shoot()
